--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:07+0200\n"
+"PO-Revision-Date: 2010-05-29 11:08+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5652,6 +5652,8 @@ msgid ""
 "This MySQL server works as <b>master</b> and <b>slave</b> in <b>replication</"
 "b> process."
 msgstr ""
+"Strežnik MySQL deluje kot <b>glavni strežnik</b> in <b>podrejenec</b> v "
+"postopku <b>podvojevanja</b>."
 
 #: server_status.php:362
 msgid "This MySQL server works as <b>master</b> in <b>replication</b> process."
