--- a/po/sl.po
+++ b/po/sl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-05-25 14:30+0200\n"
-"PO-Revision-Date: 2010-05-29 11:09+0200\n"
+"PO-Revision-Date: 2010-05-29 11:10+0200\n"
 "Last-Translator:  <dbc334@gmail.com>\n"
 "Language-Team: slovenian <sl@li.org>\n"
 "Language: sl\n"
@@ -5746,7 +5746,7 @@ msgstr "Vrsta poizvedbe"
 
 #: server_status.php:721
 msgid "Replication status"
-msgstr ""
+msgstr "Stanje podvojevanja"
 
 #: server_synchronize.php:94
 msgid "Could not connect to the source"
