--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:53+0200\n"
+"PO-Revision-Date: 2010-07-30 06:54+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2716,7 +2716,7 @@ msgstr "سانلىق مەلۇمات"
 #: libraries/export/htmlword.php:131 libraries/export/odt.php:167
 #: libraries/export/sql.php:878 libraries/export/texytext.php:130
 msgid "Dumping data for table"
-msgstr ""
+msgstr "ئايلاندۇرۇپ ساقلاش جەدىۋېلىدىكى سانلىق مەلۇمات"
 
 #: libraries/export/htmlword.php:184 libraries/export/odt.php:237
 #: libraries/export/sql.php:782 libraries/export/texytext.php:177
