--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:56+0200\n"
+"PO-Revision-Date: 2010-07-30 06:57+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2747,7 +2747,7 @@ msgstr "ئۆزئىچىگە ئالغان جەدېۋەلنىڭ تىمىسى"
 
 #: libraries/export/latex.php:39 libraries/export/latex.php:63
 msgid "Table caption"
-msgstr ""
+msgstr "جەدېۋەلنىڭ تىمىسى"
 
 #: libraries/export/latex.php:41 libraries/export/latex.php:65
 msgid "Continued table caption"
