--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:58+0200\n"
+"PO-Revision-Date: 2010-07-30 06:59+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2766,7 +2766,7 @@ msgstr "مۇناسىۋىتى"
 #: libraries/export/odt.php:317 libraries/export/sql.php:94
 #: libraries/tbl_properties.inc.php:141
 msgid "MIME type"
-msgstr ""
+msgstr "MIMEشەكلى"
 
 #: libraries/export/latex.php:129 libraries/export/sql.php:230
 #: libraries/export/xml.php:101 libraries/header_printview.inc.php:56
