--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 06:59+0200\n"
+"PO-Revision-Date: 2010-07-30 07:00+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2787,7 +2787,7 @@ msgstr "قۇرۇلغان ۋاقتى"
 #: libraries/export/latex.php:135 libraries/export/sql.php:233
 #: libraries/export/xml.php:107 main.php:185
 msgid "Server version"
-msgstr ""
+msgstr "مۇلازىمىتىر نۇسخىسى"
 
 #: libraries/export/latex.php:136 libraries/export/sql.php:234
 #: libraries/export/xml.php:108
