--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 07:02+0200\n"
+"PO-Revision-Date: 2010-07-30 07:03+0200\n"
 "Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2816,7 +2816,7 @@ msgstr ""
 
 #: libraries/export/pdf.php:23
 msgid "Report title"
-msgstr ""
+msgstr "دوكلات تېمىسى"
 
 #: libraries/export/php_array.php:16
 msgid "PHP array"
