--- a/po/ug.po
+++ b/po/ug.po
@@ -7,8 +7,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 07:03+0200\n"
-"Last-Translator:  <ablat7ihlim@yahoo.com.cn>\n"
+"PO-Revision-Date: 2010-07-30 10:38+0200\n"
+"Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
 "MIME-Version: 1.0\n"
@@ -1954,7 +1954,7 @@ msgstr ""
 
 #: libraries/display_export.lib.php:118 setup/lib/messages.inc.php:79
 msgid "Save as file"
-msgstr ""
+msgstr "ھۆججەتنى باشقا ساقلاش"
 
 #: libraries/display_export.lib.php:127
 #, php-format
