--- a/po/ug.po
+++ b/po/ug.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.4.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2010-07-28 05:45-0400\n"
-"PO-Revision-Date: 2010-07-30 11:11+0200\n"
+"PO-Revision-Date: 2010-07-30 11:12+0200\n"
 "Last-Translator:  <gheni@yahoo.cn>\n"
 "Language-Team: Uyghur <ug@li.org>\n"
 "Language: ug\n"
@@ -2063,7 +2063,7 @@ msgstr "كۆرسىتىلگەن مۇندەرىجىگە يۈكلىيەلمىدى"
 #: libraries/display_import.lib.php:165 libraries/sql_query_form.lib.php:496
 #: tbl_change.php:925
 msgid "web server upload directory"
-msgstr ""
+msgstr "مۇلازىمىتېردىكى يۈكلەش مۇندەرىجىسى"
 
 #: libraries/display_import.lib.php:211
 #, php-format
