--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -100,7 +100,7 @@ msgstr "Failed to fetch headers"
 
 #: bs_disp_as_mime_type.php:41
 msgid "Failed to open remote URL"
-msgstr ""
+msgstr "Failed to open remote URL"
 
 #: db_create.php:44
 #, php-format
