--- a/po/fr.po
+++ b/po/fr.po
@@ -10050,7 +10050,7 @@ msgstr "Choisissez les séries :"
 
 #: server_status.php:1409
 msgid "Commonly monitored"
-msgstr ""
+msgstr "Couramment surveillés"
 
 #: server_status.php:1424
 #, fuzzy
