--- a/po/fr.po
+++ b/po/fr.po
@@ -10053,10 +10053,9 @@ msgid "Commonly monitored"
 msgstr "Couramment surveillés"
 
 #: server_status.php:1424
-#, fuzzy
 #| msgid "You must provide a valid table name"
 msgid "or type variable name:"
-msgstr "Vous devez fournir un nom de table valable"
+msgstr "ou entrez un nom de variable :"
 
 #: server_status.php:1428
 msgid "Display as differential value"
