--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 16:31+0200\n"
+"PO-Revision-Date: 2011-07-29 16:32+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10059,7 +10059,7 @@ msgstr "ou entrez un nom de variable :"
 
 #: server_status.php:1428
 msgid "Display as differential value"
-msgstr ""
+msgstr "Afficher en tant que valeur différentielle"
 
 #: server_status.php:1430
 msgid "Apply a divisor"
