--- a/po/fr.po
+++ b/po/fr.po
@@ -10063,7 +10063,7 @@ msgstr "Afficher en tant que valeur différentielle"
 
 #: server_status.php:1430
 msgid "Apply a divisor"
-msgstr ""
+msgstr "Appliquer un diviseur"
 
 #: server_status.php:1437
 msgid "Append unit to data values"
