--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 16:32+0200\n"
+"PO-Revision-Date: 2011-07-29 16:33+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10070,10 +10070,9 @@ msgid "Append unit to data values"
 msgstr "Ajouter l'unité aux valeurs de données"
 
 #: server_status.php:1443
-#, fuzzy
 #| msgid "Add trigger"
 msgid "Add this series"
-msgstr "Ajouter un déclencheur"
+msgstr "Ajouter cette série"
 
 #: server_status.php:1445
 msgid "Clear series"
