--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 16:33+0200\n"
+"PO-Revision-Date: 2011-07-29 16:34+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10094,10 +10094,9 @@ msgid "Log statistics"
 msgstr "Statistiques des journaux"
 
 #: server_status.php:1460
-#, fuzzy
 #| msgid "Select page"
 msgid "Selected time range:"
-msgstr "Choisissez la page"
+msgstr "Sélectionnez un intervalle de temps :"
 
 #: server_status.php:1465
 msgid "Only retrieve SELECT,INSERT,UPDATE and DELETE Statements"
