--- a/po/fr.po
+++ b/po/fr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 16:34+0200\n"
+"PO-Revision-Date: 2011-07-29 16:56+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: french <fr@li.org>\n"
 "Language: fr\n"
@@ -10105,6 +10105,7 @@ msgstr "Ne traiter que les énoncés SELECT, INSERT, UPDATE et DELETE"
 #: server_status.php:1470
 msgid "Remove variable data in INSERT statements for better grouping"
 msgstr ""
+"Enlever les données variables des énoncés INSERT pour un meilleur groupement"
 
 #: server_status.php:1473
 msgid ""
