--- a/po/fr.po
+++ b/po/fr.po
@@ -10116,10 +10116,9 @@ msgstr ""
 "générées.</p>Les résultats sont regroupés par le texte des requêtes."
 
 #: server_status.php:1476
-#, fuzzy
 #| msgid "Query type"
 msgid "Query analyzer"
-msgstr "Type de requête"
+msgstr "Analyseur de requêtes"
 
 #: server_status.php:1512
 #, php-format
