--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1354,7 +1354,7 @@ msgstr "Filter"
 
 #: js/messages.php:154
 msgid "Filter queries by word/regexp:"
-msgstr ""
+msgstr "Filter queries by word/regexp:"
 
 #: js/messages.php:155
 msgid "Group queries, ignoring variable data in WHERE statements"
