--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1893,7 +1893,7 @@ msgstr ""
 
 #: libraries/File.class.php:507
 msgid "Error while moving uploaded file."
-msgstr ""
+msgstr "Error while moving uploaded file."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
