--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -1897,7 +1897,7 @@ msgstr "Error while moving uploaded file."
 
 #: libraries/File.class.php:515
 msgid "Cannot read (moved) upload file."
-msgstr ""
+msgstr "Cannot read (moved) upload file."
 
 #: libraries/Index.class.php:418 tbl_relation.php:526
 msgid "No index defined!"
