--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9791,10 +9791,9 @@ msgid "The number of threads that are not sleeping."
 msgstr "The number of threads that are not sleeping."
 
 #: server_status.php:1320
-#, fuzzy
 #| msgid "Start row"
 msgid "Start Monitor"
-msgstr "Start row"
+msgstr "Start Monitor"
 
 #: server_status.php:1328
 #, fuzzy
