--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9899,10 +9899,9 @@ msgid "Commonly monitored"
 msgstr "Commonly monitored"
 
 #: server_status.php:1424
-#, fuzzy
 #| msgid "You must provide a valid table name"
 msgid "or type variable name:"
-msgstr "You must provide a valid table name"
+msgstr "or type variable name:"
 
 #: server_status.php:1428
 msgid "Display as differential value"
