--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9909,7 +9909,7 @@ msgstr "Display as differential value"
 
 #: server_status.php:1430
 msgid "Apply a divisor"
-msgstr ""
+msgstr "Apply a divisor"
 
 #: server_status.php:1437
 msgid "Append unit to data values"
