--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 17:11+0200\n"
+"PO-Revision-Date: 2011-07-29 17:12+0200\n"
 "Last-Translator: Marc Delisle <marc@infomarc.info>\n"
 "Language-Team: english-gb <en_GB@li.org>\n"
 "Language: en_GB\n"
@@ -9930,10 +9930,9 @@ msgid "Series in Chart:"
 msgstr "Series in Chart:"
 
 #: server_status.php:1456
-#, fuzzy
 #| msgid "Loading"
 msgid "Loading logs"
-msgstr "Loading"
+msgstr "Loading logs"
 
 #: server_status.php:1459
 #, fuzzy
