--- a/po/en_GB.po
+++ b/po/en_GB.po
@@ -9945,7 +9945,7 @@ msgstr "Selected time range:"
 
 #: server_status.php:1465
 msgid "Only retrieve SELECT,INSERT,UPDATE and DELETE Statements"
-msgstr ""
+msgstr "Only retrieve SELECT,INSERT,UPDATE and DELETE Statements"
 
 #: server_status.php:1470
 msgid "Remove variable data in INSERT statements for better grouping"
