--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 18:28+0200\n"
+"PO-Revision-Date: 2011-07-29 18:40+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9928,16 +9928,17 @@ msgid ""
 "        activity spike.</p>"
 msgstr ""
 "<b>İzleyici kullanımı:</b><br/>\n"
-"        Tamam, ilerlemeye hazırsınız! Bir kere 'İzlemeyi başlat'a "
-"tıkladığınızda tarayıcınız tüm görüntülenen\n"
-"        çizelgeleri düzenli aralıklarla yenileyecek. 'Ayarlar' altında "
-"çizelgeleri ekleyebilir ve yenileme oranını değiştirebilirsiniz\n"
-"        veya her çizelgenin kendi dişli çark simgesini kullanarak herhangi "
-"bir çizelgeyi kaldırabilirsiniz.\n"
-"        <p>Ani hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare "
-"tuşunu basılı tutarak ve çizelge üzerinde kaydırarak ilgili zaman aralığını "
-"seçin. Bu This will load statistics from the logs helping you find what "
-"caused the        activity spike.</p>"
+"Tamam, ilerlemeye hazırsınız! Bir kere 'İzlemeyi başlat'a tıkladığınızda "
+"tarayıcınız tüm görüntülenen\n"
+"çizelgeleri düzenli aralıklarla yenileyecek. 'Ayarlar' altında çizelgeleri "
+"ekleyebilir ve yenileme oranını değiştirebilirsiniz\n"
+"veya her çizelgenin kendi dişli çark simgesini kullanarak herhangi bir "
+"çizelgeyi kaldırabilirsiniz.\n"
+"<p>Ani hareketlilik gördüğünüzde, herhangi bir çizlgede sol fare tuşunu "
+"basılı tutarak ve çizelge üzerinde kaydırarak\n"
+"ilgili zaman aralığını seçin. Bu, ani hareketlenmenin sebebini bulmanızda "
+"yardımcı olan istatistikleri günlükten\n"
+"yükleyecek.</p>"
 
 #: server_status.php:1383
 msgid ""
