--- a/po/tr.po
+++ b/po/tr.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-29 18:40+0200\n"
+"PO-Revision-Date: 2011-07-29 20:24+0200\n"
 "Last-Translator: Burak Yavuz <hitowerdigit@hotmail.com>\n"
 "Language-Team: turkish <tr@li.org>\n"
 "Language: tr\n"
@@ -9950,6 +9950,14 @@ msgid ""
 "not required any more.\n"
 "        "
 msgstr ""
+"<b>Lütfen unutmayın:</b>\n"
+"        general_log'u etkinleştirmek sunucu yükünü %5-15 arttırabilir. Aynı "
+"zamanda günlükten oluşturulan istatistiklerin yoğun görev yükü olduğundan "
+"haberiniz olsun\n"
+"         bu yüzden sadece küçük zaman aralıkları seçmek ve general_log'u "
+"etkisizleştirmek tavsiye edilir ve tablolarını bir defa boşaltmak daha fazla "
+"izlemeyi gerektirmez.\n"
+"        "
 
 #: server_status.php:1396
 msgid "CPU Usage"
