--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,8 +4,8 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-21 16:15+0200\n"
-"Last-Translator:  <teunome@gmail.com>\n"
+"PO-Revision-Date: 2011-07-30 01:13+0200\n"
+"Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
@@ -1123,10 +1123,9 @@ msgstr "Conexões / Processos"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:87
-#, fuzzy
 #| msgid "Connections since last refresh"
 msgid "Questions since last refresh"
-msgstr "Conexões desde a última atualização"
+msgstr "Questões desde a última atualização"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:89
