--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 01:17+0200\n"
+"PO-Revision-Date: 2011-07-30 01:18+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1125,7 +1125,7 @@ msgstr "Conexões / Processos"
 #: js/messages.php:87
 #| msgid "Connections since last refresh"
 msgid "Questions since last refresh"
-msgstr "Solicitações desde a última atualização"
+msgstr "Requisições desde a última atualização"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:89
