--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1162,10 +1162,9 @@ msgstr "Carga média"
 
 #. l10n: Questions is the name of a MySQL Status variable
 #: js/messages.php:102
-#, fuzzy
 #| msgid "Versions"
 msgid "Questions"
-msgstr "Versões"
+msgstr "Requisições"
 
 #: js/messages.php:103 server_status.php:894
 msgid "Traffic"
