--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 01:32+0200\n"
+"PO-Revision-Date: 2011-07-30 01:40+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1186,10 +1186,9 @@ msgid "Edit labels and series"
 msgstr "Editar rótulos e conjuntos."
 
 #: js/messages.php:107
-#, fuzzy
 #| msgid "Snap to grid"
 msgid "Add chart to grid"
-msgstr "Ajustar à grade"
+msgstr "Adicionar Gráfico/Tabela ajustado na grade"
 
 #: js/messages.php:109
 msgid "Please add at least one variable to the series"
