--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 01:42+0200\n"
+"PO-Revision-Date: 2011-07-30 01:43+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1192,7 +1192,7 @@ msgstr "Adicionar Gráfico/Tabela ajustado na grade"
 
 #: js/messages.php:109
 msgid "Please add at least one variable to the series"
-msgstr "Por favor adicione ao menos uma variável a série"
+msgstr "Por favor adicione no mínimo uma variável à série"
 
 #: js/messages.php:110 libraries/display_export.lib.php:306
 #: libraries/display_tbl.lib.php:561 libraries/export/sql.php:1052
