--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 01:49+0200\n"
+"PO-Revision-Date: 2011-07-30 01:56+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1242,9 +1242,9 @@ msgid ""
 "than %d seconds. It is advisable to set this long_query_time 0-2 seconds, "
 "depending on your system."
 msgstr ""
-"slow_query_log está ativado, mas o servidor faz o log apenas de queries que "
-"demoram mais do que %d segundos. É aconselhado alterar essa long_query_time "
-"0-2 segundos, dependendo do seu sistema."
+"\"slow_query_log\" está ativado, mas o servidor registra (log) apenas "
+"consultas que demoram mais do que %d segundos. Então, é aconselhado definir "
+"\"long_query_time\" de 0-2 segundos, dependendo do seu sistema."
 
 #: js/messages.php:121
 #, php-format
