--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1284,7 +1284,7 @@ msgstr "Desabilitar %s"
 #: js/messages.php:130
 #, php-format
 msgid "Set long_query_time to %ds"
-msgstr "Definir long_query_time para %ds"
+msgstr "Definir \"long_query_time\" para %ds"
 
 #: js/messages.php:131
 msgid ""
