--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 02:03+0200\n"
+"PO-Revision-Date: 2011-07-30 02:07+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1291,8 +1291,9 @@ msgid ""
 "You can't change these variables. Please log in as root or contact your "
 "database administrator."
 msgstr ""
-"Você não pode alterar essas variáveis. Por favor faça o log como root ou "
-"entre em contato com o administrador."
+"Você não tem permissão para alterar essas variáveis. Por favor, autentique-"
+"se como usuário \"Root\" ou entre em contato com seu administrador do banco de "
+"dados."
 
 #: js/messages.php:132
 #, fuzzy
