--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 02:07+0200\n"
+"PO-Revision-Date: 2011-07-30 02:08+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1296,10 +1296,9 @@ msgstr ""
 "dados."
 
 #: js/messages.php:132
-#, fuzzy
 #| msgid "General relation features"
 msgid "Change settings"
-msgstr "Recursos de relações gerais"
+msgstr "Alterar configurações"
 
 #: js/messages.php:133
 #, fuzzy
