--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -1301,10 +1301,9 @@ msgid "Change settings"
 msgstr "Alterar configurações"
 
 #: js/messages.php:133
-#, fuzzy
 #| msgid "General relation features"
 msgid "Current settings"
-msgstr "Recursos de relações gerais"
+msgstr "Configurações atuais"
 
 #: js/messages.php:135 server_status.php:1393
 #, fuzzy
