--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: phpMyAdmin 3.5.0-dev\n"
 "Report-Msgid-Bugs-To: phpmyadmin-devel@lists.sourceforge.net\n"
 "POT-Creation-Date: 2011-07-25 11:36+0200\n"
-"PO-Revision-Date: 2011-07-30 02:10+0200\n"
+"PO-Revision-Date: 2011-07-30 02:11+0200\n"
 "Last-Translator: Julio Cesar Zuppa <juliozuppa@gmail.com>\n"
 "Language-Team: brazilian_portuguese <pt_BR@li.org>\n"
 "Language: pt_BR\n"
@@ -1179,7 +1179,7 @@ msgstr "Configurações"
 #: js/messages.php:105
 #| msgid "Remove database"
 msgid "Remove chart"
-msgstr "Remover Gráfico/Tabela"
+msgstr "Remover Gráfico/Tabela ou Relatório"
 
 #: js/messages.php:106
 msgid "Edit labels and series"
